2007-10-06  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Add coverage for sightCharacter(),
	  netConnected(), netDisconnecting(), netFailure(),
	  handleLogoutTimeout() and avatarLogoutResponse(). First pass at
	  coverage of this class is now complete.

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp: Add better checking to functions which handle
	  sight of character and response to avatar logout from server.

2007-10-05  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Cover the rest of avatarResponse(), and
	  internalDeactivateCharacter().

2007-10-05  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp: Correct an error message.

2007-10-05  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Cover more of avatarResponse().

2007-10-05  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp: Add more checking to the info response to an
	  avatar create or take request.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Add coverage for handleLoginTimeout,
	  and avatarResponse().

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp: Add a new local function to extract an error
	  message safely and cleanly from an error operation. Make use of
	  it in some places.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Add coverage for loginComplete,
	  updateFromObject, loginError.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp: Be much more robust about handling error
	  operations from the server in response to login.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* test/BaseConnection_unittest.cpp: Hook up the logging system,
	  so we see the output.

	* test/Account_unittest.cpp: Hook up logging, and add coverage
	  for refreshCharacterInfo, createCharacter, takeCharacter,
	  isLoggedIn.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>
